[gd_scene load_steps=2 format=3 uid="uid://bwlax2dna7kaa"]

[ext_resource type="Script" uid="uid://bnox7mfsyh7r2" path="res://barkley2/scenes/_utilityStation/dna_ball_link.gd" id="1_00dks"]

[node name="ball_link" type="Node3D"]
transform = Transform3D(0.254325, -0.967119, 0, 0.967119, 0.254325, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("1_00dks")
spin = null

[node name="ball_end_1" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.45, 0)
radius = 0.25
rings = 4

[node name="ball_end_2" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45, 0)
radius = 0.25
rings = 4

[node name="ball_link_1" type="CSGSphere3D" parent="."]
radius = 0.1
rings = 4

[node name="ball_link_2" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15, 0)
radius = 0.1
rings = 4

[node name="ball_link_3" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
radius = 0.1
rings = 4
